# mate-applets

timer-applet/data/: Makefile.am  TimerApplet.xml  org.mate.panel.TimerApplet.mate-panel-applet.in.in  org.mate.panel.applets.TimerApplet.gschema.xml.in  org.mate.panel.applets.TimerApplet.mate-panel-applet.in.in  org.mate.panel.applets.TimerAppletFactory.service.in  timer-applet.glade
timer-applet/data/glades/: Makefile.am  about-dialog.glade  add-edit-preset-dialog.glade  add-edit-presets-dialog.glade  manage-presets-dialog.xml  preferences-dialog.glade  start-timer-diablog.xml
timer-applet/src/: timer-applet
timer-applet/src/timerapplet/: config.py  logger.py  utils.py
timer-applet/src/timerapplet/controllers/: GlobalController.py  Makefile.am  TimerApplet.py  TimerService.py  __init__.py  applet.py  globalcontroller.py  timerapplet.py  timermanagerservice.py  timerservice.py
timer-applet/src/timerapplet/core/: AppletMateConfWrapper.py  Makefile.am  PresetsStore.py  Timer.py  __init__.py  presetsstore.py  timer.py  (+1 more)
timer-applet/src/timerapplet/ui/: AddEditPresetDialog.py  ContinueTimerDialog.py  DurationChooser.py  Makefile.am  ManagePresetsDialog.py  Notifier.py  PieMeter.py  PreferencesDialog.py  PulseButton.py  ScrollableButtonList.py  StartNextTimerDialog.py  StartTimerDialog.py  StatusButton.py  __init__.py  aboutdialog.py  addeditpresetdialog.py  continuetimerdialog.py  durationchooser.py  managepresetsdialog.py  notifier.py  piemeter.py  preferencesdialog.py  pulsebutton.py  scrollablebuttonlist.py  startnexttimerdialog.py  starttimerdialog.py  statusbutton.py
