moduledir = $(pythondir)/timerapplet/ui
module_PYTHON = \
	__init__.py \
	eddeditpresetdialog.py \
	continuetimerdialog.py \
	durationchooser.py \
	managepresetsdialog.py \
	notifier.py \
	pieMeter.py \
	preferencesdialog.py \
	pulsebutton.py \
	scrollablebuttonList.py \
	starttimerdialog.py \
	startnexttimerdialog.py \
	statusbutton.py
