moduledir = $(pythondir)/timerapplet/ui
module_PYTHON = \
	__init__.py \
	aboutdialog.py \
	addeditpresetdialog.py \
	continuetimerdialog.py \
	durationchooser.py \
	managepresetsdialog.py \
	notifier.py \
	piemeter.py \
	preferencesdialog.py \
	pulsebutton.py \
	scrollablebuttonList.py \
	starttimerdialog.py \
	startnexttimerdialog.py \
	statusbutton.py
